Welfare and Crime lg-4 complete

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -72,6 +72,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-lg-4 text-center">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                  <iframe height="450" width="100%" scrolling="no" src="/static/images/History/crime.html?link=false"></iframe>
+                            </div>
+                        </div>
+                    </div>
 
 
 
