--- a/App/templates/search.html
+++ b/App/templates/search.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                  {{area}} <small>Analysis</small>
+                  Dublin {{area}} <small>Analysis</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li class="active">
@@ -97,14 +97,22 @@
         </div>
   </div>
   <div class="row">
-    <div class="col-lg-4 text-center">
+      <div class="col-lg-4 text-center">
           <div class="panel panel-default">
               <div class="panel-body">
-                </div>
+                    <iframe height="400" width="100%" scrolling="no" src="/static/images/History/crimes/Dublin_{{area}}.html?link=false"></iframe>
               </div>
           </div>
+        </div>
+          <div class="col-lg-4 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
+                        <iframe height="400" width="100%" scrolling="no" src="/static/images/History/welfare/Dublin_{{area}}.html?link=false"></iframe>
+                  </div>
+              </div>
+            </div>
       </div>
-    </div>
+
 
   {% endblock %}
 </html>
