--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+<body>
 <div id="page-wrapper">
 
     <div class="container-fluid">
@@ -80,9 +81,11 @@
                             </div>
                         </div>
                     </div>
-
-
-
+                  </div>
+                </div>
+              </div>
+              
+</body>
 
         <!-- /.row -->
 {% endblock %}
