--- a/App/templates/search.html
+++ b/App/templates/search.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<body>
 <div id="page-wrapper">
 
     <div class="container-fluid">
@@ -112,7 +113,9 @@
               </div>
             </div>
       </div>
+    </div>
+  </div>
 
-
+</body>
   {% endblock %}
 </html>
