Construction and search updated

--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -170,7 +170,7 @@
                         <a href="index"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
                     <li>
-                        <a href="login"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
+                        <a href="{{ url_for('year', my_var='2016') }}"><i class="fa fa-fw fa-bar-chart-o"></i> 2016</a>
                     </li>
                     <li>
                         <a href="{{ url_for('year', my_var='2015') }}"><i class="fa fa-fw fa-table"></i> 2015</a>
