--- a/App/templates/search.html
+++ b/App/templates/search.html
@@ -84,7 +84,7 @@
       <div class="col-lg-6 text-center">
           <div class="panel panel-default">
               <div class="panel-body">
-                <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src={{search}}></iframe>
+                <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/History/{{year}}/image1/Dublin_{{area}}.html?link=false"'></iframe>
 
               </div>
           </div>
@@ -92,7 +92,7 @@
       <div class="col-lg-6 text-center">
             <div class="panel panel-default">
                 <div class="panel-body">
-                  <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src={{image}}></iframe>
+                  <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/History/{{year}}/image2/Dublin_{{area}}.html?link=false"'></iframe>
                 </div>
             </div>
         </div>
@@ -101,17 +101,24 @@
       <div class="col-lg-4 text-center">
           <div class="panel panel-default">
               <div class="panel-body">
-                    <iframe height="400" width="100%" scrolling="no" src="/static/images/History/{{year}}/image3/Dublin_{{area}}.html?link=false"></iframe>
+                    <iframe height="450" width="100%" scrolling="no" src="/static/images/History/{{year}}/image3/Dublin_{{area}}.html?link=false"></iframe>
               </div>
           </div>
         </div>
           <div class="col-lg-4 text-center">
               <div class="panel panel-default">
                   <div class="panel-body">
-                        <iframe height="400" width="100%" scrolling="no" src="/static/images/History/{{year}}/image4/Dublin_{{area}}.html?link=false"></iframe>
+                        <iframe height="450" width="100%" scrolling="no" src="/static/images/History/{{year}}/image4/Dublin_{{area}}.html?link=false"></iframe>
                   </div>
               </div>
             </div>
+            <div class="col-lg-4 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                          <iframe height="450" width="100%" scrolling="no" src="/static/images/History/{{year}}/image7/Dublin_{{location}}.html?link=false"></iframe>
+                    </div>
+                </div>
+              </div>
       </div>
       <div class="row">
           <div class="col-lg-5 text-center">
