--- a/App/templates/result.html
+++ b/App/templates/result.html
@@ -59,6 +59,40 @@
                 </div>
             </div>
       </div>
+      <div class="row">
+          <div class="col-lg-6 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
+                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V3-v1.html?link=false"'></iframe>
+
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V3-v2.html?link=false"'></iframe>
+                    </div>
+                </div>
+            </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-6 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
+                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V4-v1.html?link=false"'></iframe>
+
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V4-v2.html?link=false"'></iframe>
+                    </div>
+                </div>
+            </div>
+      </div>
     </body>
 
 {% endblock %}
