--- a/App/templates/result.html
+++ b/App/templates/result.html
@@ -2,9 +2,26 @@
 {% block content %}
 <style>
 /* --------------------Code for search page  URL :http://codepen.io/jackrugile/pen/ABeIi----------------------------- */
-#expand{background-color:#eee;-webkit-transition: all 500ms linear; border:10px solid black}
-#expand:hover{border:30px solid #800}
+#expand{
+  background-color:#eee;
+  -webkit-transition: all 500ms linear;
+   border:10px solid black;
+
+ }
+#expand:hover{border:30px solid #800;font-weight: bold;}
+#names
+{
+   text-shadow: 1px 1px 6px #fff;
+ 	 position: fixed;
+   top: 100px;
+   z-index:1;
+	 font-family: Lato;
+}
+}
 </style>
+<script type="text/javascript" src="js/bootstrap.js"></script>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 <body>
 <div id="page-wrapper">
@@ -31,6 +48,36 @@
       {{value2}}
       {{v1}}
     </div>
+    <div class="row">
+      <div class="col-lg-6 text-center">
+        <div id="names">
+          <h1> {{compare1}} </h1>
+        </div>
+      </div>
+
+        <div class="col-lg-6 text-center">
+          <div id="names">
+            <h1> {{compare2}}</h1>
+          </div>
+          </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6 text-center">
+            <div id= 'expand'>
+              Travel time to Dublin City Center:
+              <img src="/static/images/car.png" alt="Mountain View" style="width:20px;height:20px;">:{{value1[0]}}
+              <img src="/static/images/walk.png" alt="Mountain View" style="width:20px;height:20px;">:{{value1[0]}}
+              <img src="/static/images/transport.ico" alt="Mountain View" style="width:20px;height:20px;">:{{value1[0]}}
+            </div>
+          </div>
+          <div class="col-lg-6 text-center">
+            <div id= 'expand'>
+              <img src="/static/images/car.png" alt="Mountain View" style="width:20px;height:20px;">:{{value2[0]}}
+              <img src="/static/images/walk.png" alt="Mountain View" style="width:20px;height:20px;">:{{value2[0]}}
+              <img src="/static/images/transport.ico" alt="Mountain View" style="width:20px;height:20px;">:{{value2[0]}}
+            </div>
+              </div>
+        </div>
       <div class="row">
           <div class="col-lg-6 text-center">
               <div class="panel panel-default">
@@ -40,6 +87,7 @@
                   </div>
               </div>
           </div>
+          <div id ="leftborder">
           <div class="col-lg-6 text-center">
                 <div class="panel panel-default">
                     <div class="panel-body">
@@ -48,6 +96,8 @@
                 </div>
             </div>
       </div>
+    </div>
+
       <div class="row">
           <div class="col-lg-6 text-center">
               <div class="panel panel-default">
@@ -57,6 +107,7 @@
                   </div>
               </div>
           </div>
+        <div id ="leftborder">
           <div class="col-lg-6 text-center">
                 <div class="panel panel-default">
                     <div class="panel-body">
@@ -65,6 +116,7 @@
                 </div>
             </div>
       </div>
+    </div>
       <div class="row">
           <div class="col-lg-6 text-center">
               <div class="panel panel-default">
@@ -74,6 +126,7 @@
                   </div>
               </div>
           </div>
+          <div id ="leftborder">
           <div class="col-lg-6 text-center">
                 <div class="panel panel-default">
                     <div class="panel-body">
@@ -82,6 +135,7 @@
                 </div>
             </div>
       </div>
+    </div>
       <div class="row">
           <div class="col-lg-6 text-center">
               <div class="panel panel-default">
@@ -91,6 +145,7 @@
                   </div>
               </div>
           </div>
+          <div id ="leftborder">
           <div class="col-lg-6 text-center">
                 <div class="panel panel-default">
                     <div class="panel-body">
@@ -99,6 +154,101 @@
                 </div>
             </div>
       </div>
+    </div>
+      <div class="row">
+          <div class="col-lg-6 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
+                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V5-v1.html?link=false"'></iframe>
+
+                  </div>
+              </div>
+          </div>
+          <div id ="leftborder">
+          <div class="col-lg-6 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V5-v2.html?link=false"'></iframe>
+                    </div>
+                </div>
+            </div>
+      </div>
+    </div>
+      <div class="row">
+          <div class="col-lg-6 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
+                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V6-v1.html?link=false"'></iframe>
+
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V6-v2.html?link=false"'></iframe>
+                    </div>
+                </div>
+            </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-6 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
+                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V7-v1.html?link=false"'></iframe>
+
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V7-v2.html?link=false"'></iframe>
+                    </div>
+                </div>
+            </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-6 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
+                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V8-v1.html?link=false"'></iframe>
+
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V8-v2.html?link=false"'></iframe>
+                    </div>
+                </div>
+            </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-6 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
+                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V9-v1.html?link=false"'></iframe>
+
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V9-v2.html?link=false"'></iframe>
+                    </div>
+                </div>
+            </div>
+      </div>
     </body>
+    <script>
+      $('page-wrapper').scroll(function() {
+      $('expand').css('top', $(this).scrollTop());
+        });
+  //your code here
+
+    </script>
 
 {% endblock %}
