--- a/App/templates/comparesearch.html
+++ b/App/templates/comparesearch.html
@@ -71,7 +71,7 @@
     height:35px;
 }
 .form-style-5 .number {
-    background: #1abc9c;
+    background:#67cbf0;
     color: #fff;
     height: 30px;
     width: 30px;
@@ -92,12 +92,12 @@
     padding: 19px 39px 18px 39px;
     color: #FFF;
     margin: 0 auto;
-    background: #1abc9c;
+    background: #67cbf0;
     font-size: 18px;
     text-align: center;
     font-style: normal;
     width: 100%;
-    border: 1px solid #16a085;
+    border: 1px solid #67cbf0;
     border-width: 1px 1px 3px;
     margin-bottom: 10px;
 }
@@ -117,11 +117,11 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Overview <small>Statistics Overview</small>
+                    Compare Two Areas <small>Selection</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li class="active">
-                        <i class="fa fa-dashboard"></i> Dashboard
+                        <i class="fa fa-dashboard"></i> Select two areas
                     </li>
                 </ol>
             </div>
