Work on front end updated -- needs to be finished

--- a/App/templates/comparesearch.html
+++ b/App/templates/comparesearch.html
@@ -121,7 +121,7 @@
                 </h1>
                 <ol class="breadcrumb">
                     <li class="active">
-                        <i class="fa fa-dashboard"></i> Select two areas
+                        <i class="fa fa-dashboard">Select two areas </i> 
                     </li>
                 </ol>
             </div>
@@ -165,7 +165,7 @@
 
   }
 
-  setTimeout(change,1500);
+  setTimeout(change,1000);
   </script>
 </script>
 {% endblock %}
