--- a/App/templates/result.html
+++ b/App/templates/result.html
@@ -65,7 +65,20 @@
             <div id= 'expand'>
               <strong>Travel time to Dublin City Center </strong> Distance: {{value1[0]}}
               <br>
-              <img src="/static/images/car.png" alt="Mountain View" style="width:20px;height:20px;">:{{value1[3]}}<br>
+              <div class="col-lg-3 col-md-6">
+                  <div class="panel panel-green">
+                      <div class="panel-heading">
+                          <div class="row">
+                              <div class="col-xs-3">
+                                  <i class="fa fa-tasks fa-5x"></i>
+                              </div>
+                              <div class="col-xs-9 text-right">
+                                  <img src="/static/images/car.png" alt="Mountain View" style="width:20px;height:20px;">:{{value1[3]}}<br>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
               <img src="/static/images/walk.png" alt="Mountain View" style="width:20px;height:20px;">:{{value1[2]}}<br>
               <img src="/static/images/transport.ico" alt="Mountain View" style="width:20px;height:20px;">:{{value1[1]}}<br>
             </div>
