--- a/App/static/css/mycss.css
+++ b/App/static/css/mycss.css
@@ -1,6 +1,6 @@
-
+fl
 input[type=textsearch] {
-    width: 130px;
+    width: 120px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
@@ -151,7 +151,7 @@ repeat-x;
   @import url(http://fonts.googleapis.com/css?family=Cabin:400);
 
   .webdesigntuts-workshop {
-  	background: #151515;
+  	background:  #00ffffff;
   	height: 100%;
   	position: absolute;
   	text-align: center;
@@ -403,3 +403,107 @@ repeat-x;
 /* --------------------Code for search page  URL :http://codepen.io/jackrugile/pen/ABeIi----------------------------- */
 #expand{background-color:#eee;-webkit-transition: all 500ms linear; border:10px solid black}
 #expand:hover{border:30px solid #800}
+
+
+/*Strip the ul of padding and list styling*/
+/* Code obtained from https://medialoot.com/blog/how-to-create-a-responsive-navigation-menu-using-only-css/ */
+ul {
+	list-style-type:none;
+	margin:0;
+	padding:80;
+	position: absolute;
+  padding-left: 2cm;
+}
+
+/*Create a horizontal list with spacing*/
+li {
+	display:inline-block;
+	float: left;
+	margin-right: 1px;
+}
+
+li a {
+	display:block;
+	min-width:140px;
+	height: 50px;
+	text-align: center;
+	line-height: 50px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #fff;
+	background: #2f3036;
+	text-decoration: none;
+}
+
+/*Hover state for top level links*/
+li:hover a {
+	background: #19c589;
+}
+
+/*Style for dropdown links*/
+ul {
+	list-style-type:none;
+	margin:0;
+	padding:0;
+	position: absolute;
+}
+
+/*Create a horizontal list with spacing*/
+li {
+	display:inline-block;
+	float: left;
+	margin-right: 1px;
+}
+
+li a {
+	display:block;
+	min-width:140px;
+	height: 50px;
+	text-align: center;
+	line-height: 50px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #fff;
+	background: #2f3036;
+	text-decoration: none;
+}
+
+/*Hover state for top level links*/
+li:hover a {
+	background: #19c589;
+}
+
+/*Style for dropdown links*/
+li:hover ul a {
+	background: #f3f3f3;
+	color: #2f3036;
+	height: 40px;
+	line-height: 40px;
+}
+
+/*Hover state for dropdown links*/
+li:hover ul a:hover {
+	background: #19c589;
+	color: #fff;
+}
+/*Hide dropdown links until they are needed*/
+li ul {
+	display: none;
+}
+
+/*Make dropdown links vertical*/
+li ul li {
+	display: block;
+	float: none;
+}
+
+/*Prevent text wrapping*/
+li ul li a {
+	width: auto;
+	min-width: 100px;
+	padding: 0 20px;
+}
+
+/*Display the dropdown on hover*/
+ul li a:hover + .hidden, .hidden:hover {
+	display: block;
+}
+/* End of  Code obtained from https://medialoot.com/blog/how-to-create-a-responsive-navigation-menu-using-only-css/ */
