--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -55,114 +55,42 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img src="/static/images/Offical3.png" alt="Dublin Dash" style="width:50px;height:50px;">
-                <a class="navbar-brand" href="index.html">Dublin Dash </a>
-            </div>
             <!-- Top Menu Items -->
-            {% if user == None %}
-               <a href="/login" class="dropdown-toggle" align ="right" ><i class="fa fa-user"></i> Sign In <b class="caret"></b></a>
-            {% else %}
-              <ul class="nav navbar-right top-nav">
-                  <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
-                      <ul class="dropdown-menu message-dropdown">
-                          <li class="message-preview">
-                              <a href="#">
-                                  <div class="media">
-                                      <span class="pull-left">
-                                          <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                      </span>
-                                      <div class="media-body">
-                                          <h5 class="media-heading"><strong>John Smith</strong>
-                                          </h5>
-                                          <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                          <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                      </div>
-                                  </div>
-                              </a>
-                          </li>
-                          <li class="message-preview">
-                              <a href="#">
-                                  <div class="media">
-                                      <span class="pull-left">
-                                          <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                      </span>
-                                      <div class="media-body">
-                                          <h5 class="media-heading"><strong>John Smith</strong>
-                                          </h5>
-                                          <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                          <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                      </div>
-                                  </div>
-                              </a>
-                          </li>
-                          <li class="message-preview">
-                              <a href="#">
-                                  <div class="media">
-                                      <span class="pull-left">
-                                          <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                      </span>
-                                      <div class="media-body">
-                                          <h5 class="media-heading"><strong>John Smith</strong>
-                                          </h5>
-                                          <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                          <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                      </div>
-                                  </div>
-                              </a>
-                          </li>
-                          <li class="message-footer">
-                              <a href="#">Read All New Messages</a>
-                          </li>
-                      </ul>
+                <ul id="menu">
+                  <li>
+                  <li><img src="/static/images/Offical3.png" alt="Dublin Dash" style="width:50px;height:50px;">
+                  <a class="navbar-brand" href="index.html">Dublin Dash </a>
+                </li>
+                <li>
+                  <a href="#">Home</a></li>
+                    <li>
+                    <a href="#">Current Data ￬</a>
+
+                    <ul class="hidden">
+                      <li><a href="#">Compare Areas </a></li>
+                      <li><a href="#">Seach areas</a></li>
+                    </ul>
                   </li>
-                  <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
-                      <ul class="dropdown-menu alert-dropdown">
-                          <li>
-                              <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
-                          </li>
-                          <li>
-                              <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a>
-                          </li>
-                          <li>
-                              <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a>
-                          </li>
-                          <li>
-                              <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a>
-                          </li>
-                          <li>
-                              <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a>
-                          </li>
-                          <li>
-                              <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a>
-                          </li>
-                          <li class="divider"></li>
-                          <li>
-                              <a href="#">View All</a>
-                          </li>
-                      </ul>
+                  <li>
+                    <a href="#">Historical ￬</a>
+                    <ul class="hidden">
+                      <li><a href="#">Search by year </a></li>
+                      <li><a href="#">Key findings </a></li>
+                      <li><a href="#">Search by area</a></li>
+                    </ul>
                   </li>
-                  <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>{{user}}<b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-                          <li>
-                              <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
-                          </li>
-                          <li>
-                              <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                          </li>
-                          <li>
-                              <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                          </li>
-                          <li class="divider"></li>
-                          <li>
-                              <a href="/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
-                          </li>
-                      </ul>
-                  </li>
+                  <li><a href="#">Prediction </a></li>
+                  <li><a href="#">Contact</a></li>
+                  <li>
+                    <div id = 'search'>
+                      <form method="post" action="{{ url_for('search') }}">
+                        <label for="search"></label>
+                        <input type="textsearch" name='Search' placeholder="Search By Area" /><br />
+                      </form>
+                    </div>
+              </li>
               </ul>
-            {%endif%}
+            </div>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
@@ -198,12 +126,7 @@
             </div>
             <!-- /.navbar-collapse -->
         </nav>
-      <div id = 'search'>
-        <form method="post" action="{{ url_for('search') }}">
-          <label for="search"></label>
-          <input type="textsearch" name='Search' placeholder="Search By Area" /><br />
-        </form>
-      </div>
+
 
     {% block content %}{% endblock %}
 </div>
