--- a/App/templates/landing.html
+++ b/App/templates/landing.html
@@ -26,15 +26,24 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+  <style>
+  /* Code obtained from https://css-tricks.com/perfect-full-page-background-image/ */
+  body{
+    background: url(/static/images/Background2.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  </style>
   </head>
+<body>
+  <div id = 'background' >
+    <section class="webdesigntuts-workshop">
+       <form method="post" action="{{ url_for('search') }}">
+          <input type="text"name = 'Search' placeholder="What is your area ?">
+            <button>Search</button>
+          </form>
+    </section>
+</div>
 </body>
-
-<section class="webdesigntuts-workshop">
-   <form method="post" action="{{ url_for('search') }}">
-      <input type="text"name = 'Search' placeholder="What is your area ?">
-        <button>Search</button>
-      </form>
-</section>
-
-
-</body
