--- a/App/templates/result.html
+++ b/App/templates/result.html
@@ -24,6 +24,8 @@
 <script type="text/javascript" src="js/bootstrap.js"></script>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <body>
 <div id="page-wrapper">
@@ -34,7 +36,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    <a href="{{ url_for('comparesearch')}}">Comparasion <small>{{compare1}} {{compare2}}</small>
+                    <a href="{{ url_for('comparesearch')}}">Comparasion <small>{{compare1}} {{compare2}}</small></a>
                 </h1>
                 <ol class="breadcrumb">
                     <li class="active">
@@ -62,37 +64,65 @@
       </div>
       <div class="row">
         <div class="col-lg-6 text-center">
-            <div id= 'expand'>
-              <strong>Travel time to Dublin City Center </strong> Distance: {{value1[0]}}
-              <br>
-              <div class="col-lg-3 col-md-6">
-                  <div class="panel panel-green">
-                      <div class="panel-heading">
-                          <div class="row">
-                              <div class="col-xs-3">
-                                  <i class="fa fa-tasks fa-5x"></i>
-                              </div>
-                              <div class="col-xs-9 text-right">
-                                  <img src="/static/images/car.png" alt="Mountain View" style="width:20px;height:20px;">:{{value1[3]}}<br>
-                              </div>
-                          </div>
+          <div class = "topborder">
+          <strong>Travel time to Dublin City Center </strong> Distance: {{value1[0]}}
+        </div>
+                <div class = "mydiv">
+                  <div class="icon-bar">
+                      <div id = "driving">
+                      <a href="#"><i class="fa fa-car" style="font-size:48px;color:white;"></i></a>
+                    </div>
+
+                      <div id = "transport">
+                      <a href="#"><i class="fa fa-bus" style="font-size:60px;color:white"></i></a>
+                    </div>
+                      <div id = "walking">
+                      <a href="#"><i class="material-icons" style="font-size:60px;color:white">directions_walk</i></a>
                       </div>
                   </div>
+                    <div class = "mydiv2">
 
-              <img src="/static/images/walk.png" alt="Mountain View" style="width:20px;height:20px;">:{{value1[2]}}<br>
-              <img src="/static/images/transport.ico" alt="Mountain View" style="width:20px;height:20px;">:{{value1[1]}}<br>
+                      <div id="bus"> {{value1[1]}}</div>
+                      <div id="walk"> {{value1[2]}}</div>
+                      <div id="drive">{{value1[3]}}</div>
+                    </div>
             </div>
-          </div>
-          <div class="col-lg-6 text-center">
-            <div id= 'expand'>
-              <strong>Travel time to Dublin City Center </strong> Distance: {{value2[0]}}
-              <br>
-              <img src="/static/images/car.png" alt="Mountain View" style="width:20px;height:20px;">:{{value2[3]}}<br>
-              <img src="/static/images/walk.png" alt="Mountain View" style="width:20px;height:20px;">:{{value2[2]}}<br>
-              <img src="/static/images/transport.ico" alt="Mountain View" style="width:20px;height:20px;">:{{value2[1]}}<br>
-            </div>
-              </div>
         </div>
+        <div class="col-lg-6 text-center">
+          <div class = "topborder">
+          <strong>Travel time to Dublin City Center </strong> Distance: {{value2[0]}}
+        </div>
+                <div class = "mydiv">
+                    <div class="icon-bar">
+                        <div id = "driving2">
+                        <a href="#"><i class="fa fa-car" style="font-size:48px;color:white;"></i></a>
+                      </div>
+
+                        <div id = "transport2">
+                        <a href="#"><i class="fa fa-bus" style="font-size:60px;color:white"></i></a>
+                      </div>
+                        <div id = "walking2">
+                        <a href="#"><i class="material-icons" style="font-size:60px;color:white">directions_walk</i></a>
+                        </div>
+                    </div>
+
+                    <div class = "mydiv2">
+
+                        <div id="bus2">
+                        {{value2[1]}}
+                          </div>
+
+                        <div id="walk2">
+                         {{value2[2]}}
+                           </div>
+
+                        <div id="drive2">
+                        {{value2[3]}}
+                      </div>
+                    </div>
+            </div>
+        </div>
+      </div>
       <div class="row">
           <div class="col-lg-6 text-center">
               <div class="panel panel-default">
@@ -279,5 +309,44 @@
         });
 
     </script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("#transport").mouseover(function () {
+      $('#bus').css('visibility','visible');})
+  $("#transport").mouseout(function () {
+      $('#bus').css('visibility','hidden');})
+  });
+$(document).ready(function(){
+    $("#walking").mouseover(function () {
+        $('#walk').css('visibility','visible');})
+    $("#walking").mouseout(function () {
+        $('#walk').css('visibility','hidden');})
+    });
+$(document).ready(function(){
+  $("#driving").mouseover(function () {
+      $('#drive').css('visibility','visible');})
+  $("#driving").mouseout(function () {
+      $('#drive').css('visibility','hidden');})
+  });
+  $(document).ready(function(){
+    $("#transport2").mouseover(function () {
+        $('#bus2').css('visibility','visible');})
+    $("#transport2").mouseout(function () {
+        $('#bus2').css('visibility','hidden');})
+    });
+  $(document).ready(function(){
+      $("#walking2").mouseover(function () {
+          $('#walk2').css('visibility','visible');})
+      $("#walking2").mouseout(function () {
+          $('#walk2').css('visibility','hidden');})
+      });
+  $(document).ready(function(){
+    $("#driving2").mouseover(function () {
+        $('#drive2').css('visibility','visible');})
+    $("#driving2").mouseout(function () {
+        $('#drive2').css('visibility','hidden');})
+    });
+</script>
 
 {% endblock %}
