--- a/App/templates/result.html
+++ b/App/templates/result.html
@@ -7,7 +7,6 @@
   -webkit-transition: all 500ms linear;
    border:5px solid black;
    text-align: left;
-
  }
 #expand:hover{border:10px solid #67cbf0;font-weight: bold;}
 #names
@@ -22,7 +21,7 @@
 }
 </style>
 <script type="text/javascript" src="js/bootstrap.js"></script>
-
+<link href="/static/css/results.css" rel="stylesheet">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -292,7 +291,6 @@
       $('page-wrapper').scroll(function() {
       $('expand').css('top', $(this).scrollTop());
         });
-
         $(function(){
             $(window).scroll(function() {
                 if ($(this).scrollTop() > 75) {
@@ -307,7 +305,6 @@
                 }
             });
         });
-
     </script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
 <script>
