Calculate average for sale over time-added and front end included

--- a/App/templates/result.html
+++ b/App/templates/result.html
@@ -126,6 +126,25 @@
           <div class="col-lg-6 text-center">
               <div class="panel panel-default">
                   <div class="panel-body">
+                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V10-v1.html?link=false"'></iframe>
+
+                  </div>
+              </div>
+          </div>
+        <div id ="leftborder">
+          <div class="col-lg-6 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V10-v2.html?link=false"'></iframe>
+                    </div>
+                </div>
+            </div>
+      </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-6 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
                     <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V1-v1.html?link=false"'></iframe>
 
                   </div>
