--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -92,6 +92,7 @@
               </ul>
             </div>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+            <div id = 'side'>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
@@ -124,6 +125,7 @@
                     </li>
                 </ul>
             </div>
+          </div>
             <!-- /.navbar-collapse -->
         </nav>
 
