--- a/App/templates/result.html
+++ b/App/templates/result.html
@@ -27,11 +27,22 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <body>
+
 <div id="page-wrapper">
 
+
     <div class="container-fluid">
+      <div class="outsideicon">
+        <div class="icon-bar">
+            <a id="saleid"><font size= "4px">Sale</font></a>
+            <a id="rentid"><font size= "4px">Rent</font></a>
+            <a id="schoolid"><font size= "4px">Schools</font></a>
+        </div>
+      </div>
+
 
         <!-- Page Heading -->
+    <div class="insidebody">
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
@@ -122,6 +133,7 @@
             </div>
         </div>
       </div>
+      <div id = 'sale'>
       <div class="row">
           <div class="col-lg-6 text-center">
               <div class="panel panel-default">
@@ -141,64 +153,6 @@
             </div>
       </div>
       </div>
-      <div class="row">
-          <div class="col-lg-6 text-center">
-              <div class="panel panel-default">
-                  <div class="panel-body">
-                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V11-v1.html?link=false"'></iframe>
-
-                  </div>
-              </div>
-          </div>
-        <div id ="leftborder">
-          <div class="col-lg-6 text-center">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V11-v2.html?link=false"'></iframe>
-                    </div>
-                </div>
-            </div>
-      </div>
-      </div>
-      <div class="row">
-          <div class="col-lg-6 text-center">
-              <div class="panel panel-default">
-                  <div class="panel-body">
-                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V1-v1.html?link=false"'></iframe>
-
-                  </div>
-              </div>
-          </div>
-          <div id ="leftborder">
-          <div class="col-lg-6 text-center">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V1-v2.html?link=false"'></iframe>
-                    </div>
-                </div>
-            </div>
-      </div>
-    </div>
-
-      <div class="row">
-          <div class="col-lg-6 text-center">
-              <div class="panel panel-default">
-                  <div class="panel-body">
-                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V2-v1.html?link=false"'></iframe>
-
-                  </div>
-              </div>
-          </div>
-        <div id ="leftborder">
-          <div class="col-lg-6 text-center">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V2-v2.html?link=false"'></iframe>
-                    </div>
-                </div>
-            </div>
-      </div>
-    </div>
       <div class="row">
           <div class="col-lg-6 text-center">
               <div class="panel panel-default">
@@ -237,6 +191,27 @@
             </div>
       </div>
     </div>
+  </div>
+  <div id = 'rent'>
+      <div class="row">
+          <div class="col-lg-6 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
+                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V11-v1.html?link=false"'></iframe>
+
+                  </div>
+              </div>
+          </div>
+        <div id ="leftborder">
+          <div class="col-lg-6 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V11-v2.html?link=false"'></iframe>
+                    </div>
+                </div>
+            </div>
+      </div>
+      </div>
       <div class="row">
           <div class="col-lg-6 text-center">
               <div class="panel panel-default">
@@ -324,6 +299,51 @@
                 </div>
             </div>
       </div>
+    </div>
+  <div id = 'schools'>
+      <div class="row">
+          <div class="col-lg-6 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
+                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V1-v1.html?link=false"'></iframe>
+
+                  </div>
+              </div>
+          </div>
+          <div id ="leftborder">
+          <div class="col-lg-6 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V1-v2.html?link=false"'></iframe>
+                    </div>
+                </div>
+            </div>
+      </div>
+    </div>
+
+      <div class="row">
+          <div class="col-lg-6 text-center">
+              <div class="panel panel-default">
+                  <div class="panel-body">
+                    <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/2017/V2-v1.html?link=false"'></iframe>
+
+                  </div>
+              </div>
+          </div>
+        <div id ="leftborder">
+          <div class="col-lg-6 text-center">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                      <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='static/images/2017/V2-v2.html?link=false"'></iframe>
+                    </div>
+                </div>
+            </div>
+      </div>
+    </div>
+
+    </div>
+
+  </div>
     </body>
     <script>
       $('page-wrapper').scroll(function() {
@@ -346,6 +366,11 @@
     </script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
 <script>
+$(document).ready(function(){
+      $('#side').css('visibility','hidden');
+      $('#wrapper').css('padding-left','0px');
+    });
+
 $(document).ready(function(){
   $("#transport").mouseover(function () {
       $('#bus').css('visibility','visible');})
@@ -382,6 +407,11 @@ $(document).ready(function(){
     $("#driving2").mouseout(function () {
         $('#drive2').css('visibility','hidden');})
     });
+</script>
+<script>
+  $('a#saleid').click(function(){document.querySelector('#sale').scrollIntoView({ behavior: 'smooth' });});
+  $('a#rentid').click(function(){document.querySelector('#rent').scrollIntoView({ behavior: 'smooth' });});
+  $('a#schoolid').click(function(){document.querySelector('#schools').scrollIntoView({ behavior: 'smooth' });});
 </script>
 
 {% endblock %}
