Storyboard front end added

--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -80,7 +80,7 @@
                     </ul>
                   </li>
                   <li><a href="#">Prediction </a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="{{url_for('story')}}">Story Board</a></li>
                   <li>
                     <div id = 'search'>
                       <form method="post" action="{{ url_for('search') }}">
