Index page for each area added

--- a/App/templates/landing.html
+++ b/App/templates/landing.html
@@ -41,7 +41,7 @@
 <body>
   <div id = 'background' >
     <section class="webdesigntuts-workshop">
-       <form method="post" action="{{ url_for('search') }}">
+       <form method="post" action="{{ url_for('index') }}">
           <input type="text"name = 'Search' placeholder="What is your area ?">
             <button>Search</button>
           </form>
