--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -95,6 +95,7 @@
             <div id = 'side'>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
+                  <div id ='sideways'>
                     <li class="active">
                         <a href="index"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
@@ -123,6 +124,7 @@
                     <li>
                         <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
                     </li>
+                  </div>
                 </ul>
             </div>
           </div>
